--- a/templates/adminTable.html
+++ b/templates/adminTable.html
@@ -5,10 +5,13 @@
 			    border: 1px solid black;
 			}
 		</style>
+
+		{% load staticfiles %}
+			<link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}">
 	</head>
 	<body>
 	    <div id="table content">
-	    	<table>
+	    	<table class="juiceTable">
 	    		<tr>
 	    			<th>Name</th>
 	    			<th>Surname</th>
