updated README, rollback changes on 'admin/lecturer'

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,12 @@
 .juiceTable{
-	width: 80%;
-	background: #FF9933;
+	width:80%;
+	background:#FF9933;
+}
+
+.gap{
+	height:75px;
+}
+
+table, th, td{
+	border: 1px solid black;
 }
