--- a/templates/adminTable.html
+++ b/templates/adminTable.html
@@ -1,11 +1,5 @@
 {% if ord_lect %}
 	<head>
-		<style>
-			table, th, td {
-			    border: 1px solid black;
-			}
-		</style>
-
 		{% load staticfiles %}
 			<link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}">
 	</head>
@@ -28,7 +22,7 @@
 		        {% endfor %}
 	        </table>
 	    </div>
-	    <div style="height:75px"></div>
+	    <div class="gap"></div>
 	    <div>
 	    	<a href="/admin/"><b>Home</b></a> 
 	    </div>
